--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- <link rel="stylesheet" src="../src/index.css"> -->
-    <title>React App</title>
+    <link rel="icon" href="titleicon.jpg" >
+    <title>Keeper</title>
   </head>
   <body>
     <div id="root"></div>
